# pyproject.toml

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.poetry]
name = "teapublish"
version = "1.0.0"
description = "tea project publish"
authors = ["KurniawanZATY"]

[tool.poetry.dependencies]
python = "^3.8"
pyip = "^1.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
